[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Player/MerikAnimations/Aim_stopped.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player/OldPartner.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.25, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.25, 18.75 )

[node name="OldPartner" type="KinematicBody2D" groups=["Boss"]]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
health = 500
boss_name = "Old Partner"

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.168627, 0.168627, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="HitZone" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 43

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
position = Vector2( -0.5, 0 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Gun" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Gun"]
position = Vector2( 24, -4.5 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, -0.25 )
shape = SubResource( 2 )

[connection signal="body_entered" from="HitZone" to="." method="_on_HitZone_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
